--- a/chrome-extension/d3.css
+++ b/chrome-extension/d3.css
@@ -22,10 +22,19 @@
   stroke-width: 1.5px;
 }
 
-
-
 #dialog {
   background-color: white;
   opacity: 1.0;
 
+}
+
+#tooltip {
+  position: absolute;
+  background: white;
+  opacity: 0.9;
+  z-index: 10;
+  display: none;
+  border-radius: 8px;
+  padding: 2px;
+/*  box-shadow:7px 7px 5px 0px rgba(50, 50, 50, 0.75);*/
 }
