--- a/chrome-extension/d3.css
+++ b/chrome-extension/d3.css
@@ -30,11 +30,11 @@
 
 #tooltip {
   position: absolute;
-  background: white;
+/*  background: black;*/
   opacity: 0.9;
-  z-index: 10;
+/*  z-index: 10;*/
   display: none;
   border-radius: 8px;
   padding: 2px;
-/*  box-shadow:7px 7px 5px 0px rgba(50, 50, 50, 0.75);*/
+  box-shadow:7px 7px 5px 0px rgba(50, 50, 50, 0.75);
 }
