--- a/chrome-extension/d3.css
+++ b/chrome-extension/d3.css
@@ -30,7 +30,7 @@
 
 #tooltip {
   position: absolute;
-/*  background: black;*/
+  background: white;
   opacity: 0.9;
 /*  z-index: 10;*/
   display: none;
